# GOIT-DAT

./: README.md  connect.py  create_db.py  hw_2.sql  hw_sql_2.db  seed.py
GOIT/Py16WEB/m16_02_02/m16_app_pip/: Dockerfile  app.py  main.py
GOIT/Py16WEB/m16_02_02/m16_app_poetry/: Dockerfile  app.py  main.py  pyproject.toml
