[tool.poetry]
name = "m16-app-poetry"
version = "0.1.0"
description = ""
authors = ["Elman Safarov <elman19.60.07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
poetry-core = "2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
